2016-08-25         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.4: Release tar ball made.

2016-08-01         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (ignrcas3): Adjust to check that the el_GR.xxx locale
	is present. Move it to extra tests so it's not run by default.

2016-08-02         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (sortfor2): New test.
	* sortfor2.awk, sortfor2.in, sortfor2.ok: New files.
	Thanks Christian Schneider <software@chschneider.eu>
	for the report.

	Unrelated:

	* Makefile.am (ignrcas3): New test.
	* ignrcas3.awk, ignrcas3.ok: New files.
	Based on test code from Norihiro Tanaka <noritnk@kcn.ne.jp>.

2015-06-17         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (ofmtstrnum): New test.
	* ofmtstrnum.awk, ofmtstrnum.ok: New files.

2016-07-01         Arnold D. Robbins     <arnold@skeeve.com>

	* arrayind1.awk, arrayind1.ok: Comment out prints to stderr to
	avoid buffer flushing on obscure systems.
	* dumpvars.ok, symtab6.ok, symtab8.ok: Update after code changes.

2016-06-14         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (subback): New test.
	* subback.awk, subback.in, subback.ok: New files.
	Thanks to Mike Brennan for the test.

	Unrelated:

	* Makefile.am (FAIL_CODE1): Update the list.

2016-06-14         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (GAWK_EXT_TESTS): Add mixed1. Who knows
	how long that's been broken...
	* mixed1.ok: Adjust to match what the code produces.
	Thanks to John E. Malmberg <wb8tyw@qsl.net> for the report.

2016-06-08         Arnold D. Robbins     <arnold@skeeve.com>

	* symtab10.awk, symtab10.in, symtab10.ok: New files.
	* Makefile.am (symtab10): New test.
	Thanks to Hermann Peifer for the report.

2016-06-01         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (hex2): New test.
	* hex2.awk, hex2.in, hex2.ok: New files.

2016-05-30         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (fsnul1): New test.